# opencv-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
00_Sample_Programs/: convert_to_grayscale.cpp  draw_shapes_and_text.cpp  load_and_display.cpp  resize_and_rotate.cpp  video_capture_webcam.cpp
01_Basics_of_Image_Processing/: Details.md  basic.cpp  color_models.cpp  details_noise.md  histograms_color.cpp  histograms_grayscale.cpp  noise_reduction.cpp
Practice_Programs/Beginner/: 10_print_pixels.cpp  11_split_color_image.cpp  12_flip_images.cpp  1_load_display_save.cpp  2_convert_to_grayscale.cpp  3_resize_rotate.cpp  4_crop_ROI.cpp  5_draw_lines_shapes_text.cpp  6_blend_two_images.cpp  7_gaussian_median_blur.md  8_gaussian_median_blur.cpp  9_canny_edge_detection.cpp
